Report CPU module part 1

--- a/Report/main.tex
+++ b/Report/main.tex
@@ -24,6 +24,7 @@
 \input{Sections/Implementation}
 \input{Sections/Code}
 \input{Sections/Conclusions}
+\input{Sections/Appendix}
 
 \appendix
 \printbibliography[heading=bibintoc]
