--- a/Report/Sections/Appendix.tex
+++ b/Report/Sections/Appendix.tex
@@ -1,5 +1,4 @@
-\section{Appendix} \label{sec:appendix}
-*explaination of the problem*
-*implementation and explaination of the code*
+\section{Appendix:} \label{sec:appendix}
+
 \subsection{Sample Subsection}  \label{ssec:laser_technology}
 Sample Text \cite{OurWork}
