--- a/Report/Sections/Code.tex
+++ b/Report/Sections/Code.tex
@@ -1,5 +1,8 @@
 \section{Instruction Set and Code Development} \label{sec:code}
-*explaination of the problem*
-*implementation and explaination of the code*
-\subsection{Sample Subsection}  \label{ssec:laser_technology}
-Sample Text \cite{OurWork}
+\subsection{Instructions}
+\subsection{Basic Examples}
+*test JUMP, etc*
+\subsection{Example: For Loop}  \label{ssec:laser_technology}
+The following example loops over various instructions to generate the
+natural numbers up to a certain value \code{??} and write them on memory starting from a chosen location
+*code and explaination*
