Updated Report and Presentation

--- a/Report/Sections/Appendix.tex
+++ b/Report/Sections/Appendix.tex
@@ -1,7 +1,7 @@
 \section{Appendix: Processed Pseudo-Asm} \label{sec:appendix}
 The following pseudo-asm has been commented with the scope of illustrating how the various instructions are mapped to binary memory form.
 The curl brackets \{ \} represent the memory addresses of the positions occupied by the
-instructions/data, the brackets ( ) contain the number of bytes occupied and the square [ ] contain the actual memory values.
+instructions/data, the brackets ( ) contain the number of bytes occupied and the square [ ] contain the hexadecimal values corresponding to instructions and data.
 \begin{verbatim}
 //jump directly to instructions
 {00 01}JMP PTR[LOOP] (2) [C3 15]
