--- a/Report/Sections/Conclusions.tex
+++ b/Report/Sections/Conclusions.tex
@@ -1,1 +1,3 @@
 \section{Conclusion} \label{sec:concl}
+A computing system inspired by the Intel 8080 was syntethized using a Xilinx Spartan 3A, and a simple Loop Example was
+developed and tested.
