--- a/Report/Sections/Introduction.tex
+++ b/Report/Sections/Introduction.tex
@@ -1,3 +1,3 @@
 \section{Introduction} \label{sec:intro}
-*Motivation, what a microprocessor is, what is the Von Neumann architecture vs Harvard architecture*
-*Description of the General Features*
+Digital computers allow to store, process and transmit information under the form of binary numbers.
+The scope of this work is to synthesize a computing system inspired on the model of the Intel 8080 Microprocessor, using a Xilinx Spartan 3A.
