--- a/Report/main.tex
+++ b/Report/main.tex
@@ -1,7 +1,7 @@
 \documentclass[12pt]{reportclass}
 
 \logo{logo_unitn.png}
-\title{Developments of a FPGA-based Intel 8080 Mockup Soft Microprocessor}
+\title{An FPGA-based Intel 8080 Mockup Soft Microprocessor}
 \author{Leonardo Cattarin }
 \date{}
 \institute{University of Trento}
