--- a/Report/bibliography.bib
+++ b/Report/bibliography.bib
@@ -1,8 +1,22 @@
-@misc{OurWork,
-	author = {Name Surname},
-	title = {{Text Title}},
-	year = {2021},
-	publisher = {Generic Publisherb},
-	journal = {Journal of Samples},
-	howpublished = {\url{https://sampletext.noex}}
+@manual{Assembly,
+title = {8080/8085 Assembly language programming manual},
+date = { 1977},
+language = {English},
+organization = {Intel Corporation}
+}
+
+@manual{Board,
+title = {Spartan-3A/3AN
+FPGA Starter Kit
+Board User Guide},
+language = {English},
+organization = {Xilinx, Inc.}
+}
+
+@manual{BRAM,
+title = {Using Block RAM in Spartan-3 Generation
+FPGAs},
+date = {2005},
+language = {English},
+organization = {Xilinx, Inc.}
 }
